<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/post_bg"
    tools:context=".posts.PostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/postToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postToolbar"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/food_recipe_title"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/postFrTitleEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/post_edit_txt_bg"
                        android:ems="10"
                        android:hint="@string/enter_title"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:padding="14dp"
                        android:textColor="#1C1C1C"
                        android:textColorHint="#393939" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/tag_line"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/postFrTagLineEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/post_edit_txt_bg"
                        android:ems="10"
                        android:hint="@string/enter_tag_line"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:padding="14dp"
                        android:textColor="#1C1C1C"
                        android:textColorHint="#393939" />

                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginEnd="48dp"
                    android:background="@color/line_bg_green"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/required_ingredients"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/postFrIngredientsEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/post_edit_txt_bg"
                        android:ems="10"
                        android:hint="@string/enter_ingredients"
                        android:inputType="textMultiLine|textImeMultiLine"
                        android:minHeight="48dp"
                        android:padding="14dp"
                        android:textColor="#1C1C1C"
                        android:textColorHint="#393939" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/procedure_to_be_followed"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/postFrProcedureEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/post_edit_txt_bg"
                        android:ems="10"
                        android:hint="@string/enter_procedure"
                        android:inputType="textMultiLine|textImeMultiLine"
                        android:minHeight="48dp"
                        android:padding="14dp"
                        android:textColor="#1C1C1C"
                        android:textColorHint="#393939" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/any_other_instructions"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/postFrAddInsEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/post_edit_txt_bg"
                        android:ems="10"
                        android:hint="@string/additional_instructions"
                        android:inputType="textMultiLine|textImeMultiLine"
                        android:minHeight="48dp"
                        android:padding="14dp"
                        android:textColor="#1C1C1C"
                        android:textColorHint="#393939" />
                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginEnd="64dp"
                    android:background="#295D09"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="Upload Image :"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/post_edit_txt_bg">

                        <ImageView
                            android:id="@+id/postUploadedIv"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/splash_photo" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/postImageUploadBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="5dp"
                            android:onClick="UploadPostBtn"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/post_upload_btn_bg"
                            android:elevation="10dp"
                            android:text="upload"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            tools:ignore="UsingOnClickInXml" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>